# travel-points

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  deploy.sh  points-deal-finder-spec.md  pyproject.toml  requirements.txt  travel-points.service  travel-points.timer
.github/workflows/: daily-digest.yml
deploy/: server-deploy.sh
src/: config.py  main.py  models.py  state.py
src/data/: airline_products.yaml  layover_cities.yaml  transfer_partners.yaml
src/email/: builder.py  preview.py  sender.py
src/email/templates/: daily_digest.html  daily_digest.txt
src/layover/: analyzer.py
src/scoring/: airline_quality.py  engine.py  transfer_paths.py
src/sources/: seats_aero.py  transfer_bonuses.py
tests/: test_email_builder.py  test_email_sender.py  test_main.py  test_seats_aero.py  test_transfer_bonuses.py
