[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "points-deal-finder"
version = "0.1.0"
description = "Automated business class award flight deal finder & daily digest"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "feedparser>=6.0.10",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "resend>=0.7.0",
    "python-dateutil>=2.8.0",
    "markupsafe>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
]
